# relatednessFinder

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
relatednessFinder/: relatedness_finder.py
relatednessFinder/analysis/: __init__.py  distributions.py
relatednessFinder/database/: __init__.py  database_methods.py
relatednessFinder/log/: __init__.py  logger.py
relatednessFinder/utilities/: __init__.py  exceptions.py  grid_files.py  log_levels.py  writer.py
tests/: test_relatednessfinder.py
