[tool.poetry]
name = "relatednessFinder"
version = "0.2.0"
description = ""
authors = ["jtb324 <james.baker@vanderbilt.edu>"]
readme="README.md"

[tool.poetry.scripts]
relatedness_finder = "relatednessFinder.relatedness_finder:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"
pylint = "^2.15.10"
scalene = "^1.5.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
