[tool.poetry]
name = "relatednessFinder"
version = "0.4.0"
description = "python cli tool to analysis the pairwise relatedness of individuals within a database"
authors = ["J.T. Baker <james.baker@vanderbilt.edu>"]
maintainers = ["J.T. Baker <james.baker@vanderbilt.edu>"]
readme="README.md"
repository="https://github.com/jtb324/relatednessFinder"

[tool.poetry.dependencies]
python = ">=3.10, <3.11.0"
typer = {extras = ["all"], version = "^0.7.0"}
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"
scalene = "^1.5.19"
isort = "^5.12.0"
pylint = "^2.16.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
scalene = "^1.5.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
